# DocReasoner

./: .env.development.template  .env.production.template  .gitignore  AGENTS.md  COMPLETENESS.md  DEMO_SUMMARY.md  Dockerfile  PROJECT_COMPLETENESS_REPORT_2025-11-11.md  PROJECT_COMPLETENESS_REPORT_2025-11-12.md  README.md  alembic.ini  comple_sonnet.md  completion.md  demo.py  demo_validators.py  docker-compose.full.yml  docker-compose.yml  journal.md  old_plan.md  pyproject.toml
alembic/: env.py
alembic/versions/: 693889b485e5_create_policy_tables.py
docs/: MVP.md  architecture.md  pageindex.md  plan.md  project.md  react_controller.md  structure.md  test_cases.md  tools.md
plan/: controller_next_steps_execplan.md  policy_ingestion_persistence_execplan.md  react_controller_implementation_execplan.md  treestore_integration_execplan.md  unified_retrieval_pipeline_execplan.md
references/: Build Your Own Database in Go From Scratch - From B+tree to SQL in 3000 lines, 2nd Edition (James Smith) (Z-Library).txt
scripts/: ingest_policy.py  init_db.py  migrate_postgres_to_treestore.py  migrate_to_treestore.py  optimize_react_prompt.py  rollback_migration.py  run_decision.py
src/: cli.py
src/controller/: __init__.py  react_controller.py  status_mapping.py  validators.py
src/policy_ingest/: pageindex_client.py  persistence.py
src/reasoning_service/: __init__.py  config.py
src/retrieval/: fts5_fallback.py  service.py  tree_search.py
src/telemetry/: logger.py
tests/: __init__.py  conftest.py
tests/integration/: test_api.py  test_react_real_policy.py  test_reason_route.py  test_treestore_e2e.py
tests/unit/: test_case_conversion.py  test_controller_delegator.py  test_gepa_runner.py  test_new_tools.py  test_observability_metrics.py  test_prompt_evaluator.py  test_prompt_optimizer.py  test_prompt_registry.py  test_pubmed_tool.py  test_react_controller_async.py  test_react_controller_sync.py  test_real_react_controller.py  test_retrieval_service.py  test_retrieval_treestore.py  test_safety.py  test_treestore_integration.py  (+1 more)
tree_db/: .dockerignore  ARCHITECTURE.md  CHECKLIST.md  DEPLOYMENT.md  Dockerfile  GETTING_STARTED.md  IMPLEMENTATION_PLAN.md  Makefile  PERFORMANCE.md  PRODUCTION_READINESS_PLAN.md  PROGRESS.md  PROJECT_STRUCTURE.md  README.md  STATUS.md  go.mod  go.sum
(+835 files in other folders)
