[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "reasoning-service"
version = "0.1.0"
description = "Reasoning Layer for Prior Authorization - PageIndex-based policy verification"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "you@example.com"}
]
keywords = ["reasoning", "healthcare", "prior-auth", "rag", "pageindex"]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.23",
    "alembic>=1.12.0",
    "psycopg2-binary>=2.9.9",
    "httpx>=0.25.0",
    "tenacity>=8.2.3",
    "python-json-logger>=2.0.7",
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-instrumentation-fastapi>=0.42b0",
    "redis>=5.0.1",
    "numpy>=1.26.0",
    "scikit-learn>=1.3.2",
    "sentence-transformers>=2.2.2",
    "rank-bm25>=0.2.2",
    "typer>=0.9.0",
    "asyncpg>=0.30.0",
    "greenlet>=3.2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    "httpx>=0.25.0",
]
llm = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
]

[project.scripts]
reasoning-service = "reasoning_service.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/reasoning_service"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src/reasoning_service --cov-report=html --cov-report=term-missing"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "black",
    "httpx",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "ruff",
]
